fixed code tag not showing

--- a/styles/less/index.less
+++ b/styles/less/index.less
@@ -183,7 +183,7 @@ pre code[class*='lang-']
   display: block;
 }
 
-code:not(pre > code)
+:not(pre) > code
 {
   background: @deep;
   padding: 1px;
